--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
       <button type="button" onclick="agregarFila()">Agregar Actividad</button>
       <button type="submit">Enviar</button>
     </form>
+<table>
+    <div class="result">
+      <p>Promedio: </p>
+      <p>Estado: </p>
+    </div>
+</table>
+<table>
+  <div class="actividad">
+    <p >Actividad: </p>
+    <p >Nota:</p>
+    <button id="guardar">Guardar</button>
+  </div>
+</table>
+ 
+  </div>
   </div>
 
   <script src="js/index.js"></script>
