--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
  
   </div>
   </div>
+ 
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <p>¿Estás seguro de que deseas eliminar esta actividad?</p>
+      <button id="modalsi">Confirmar</button>
+      <button id="modalno">Cancelar</button>
+    </div>
+  </div>
+
   <script src="js/index.js"></script>
 
 </body>
