se pucieron los ultimos id

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="actividad">
     <p >Actividad: <input type="text"id="actividad"> </textarea> </p>
     <p >Nota:<input type="number" id="nota">  </textarea> </p>
-    <button onclick="guardar_valores()">Guardar</button>
+    <button onclick="guardar_valores()" id="guardar">Guardar</button>
     
 
   </div>
